Stop checking compositing in PaintLayer::GetBackgroundPaintLocation

PaintLayer::GetBackgroundPaintLocation returns a mask of where the
background should paint and is used for determining if composited
scrolling can occur at all through:
PaintLayerScrollableArea::ComputeNeedsCompositedScrolling.

If composited scrolling is not used, callsites handle not actually
painting onto the scrolling contents layer, see:
CompositedLayerMapping::UpdateBackgroundPaintsOntoScrollingContentsLayer

This patch breaks the dependency cycle introduced by [1]. Instead of
querying compositing state, this patch special-cases the root layer
so that kBackgroundPaintInScrollingContents can be returned even if
there is no overflow because the root layer creates scrolling contents
layers in this case.

[1] https://crrev.com/c35ca861a1dde [formerly 9e0775c12ad12]

Bug: 835755
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I139f2f85c68d267de80c7b1e534a9fcef9af3983
Reviewed-on: https://chromium-review.googlesource.com/1042529
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555806}
Former-commit-id: 66da0224bbb29d288f3cee13d3a6d2f6cb33af0c